Upgraded to jdk 21. Upgraded dependecies.